# cmake-implib-utils

./: CMakeLists.txt  Config.cmake.in  README.md  implib_utils.cmake  import_utils.cmake
.github/workflows/: reuse.yml
.reuse/: dep5
